# edge-perception-cpp

./: .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  pytest.ini  requirements-common.txt  requirements-cpu.txt  requirements-gpu.txt  requirements-tensorrt.txt  requirements-test.txt  requirements.txt
.github/workflows/: ci.yml
data/: dataset.py  download.py
docs/: BUILD_MAX_PERFORMANCE.md  GPU_PIPELINE_USAGE.md  OPTIMIZATION_AUDIT.md  backend_matrix.md
include/: benchmark.hpp  gpu_pipeline.hpp  image_processor.hpp  inference_engine.hpp  postprocess.hpp
src/: benchmark.cpp  gpu_pipeline.cu  gpu_pipeline_common.cpp  gpu_pipeline_stub.cpp  image_processor.cpp  inference_engine.cpp  main.cpp  postprocess.cpp
tests/: generate_test_model.py  test_auto_backend.py  test_inference.cpp  test_parity.py
training/: evaluate.py  export_model.py  train_detector.py
